创建登录页面及登录校验，并实现首页跳转

--- a/ChatFront/pages/index.html
+++ b/ChatFront/pages/index.html
@@ -45,6 +45,13 @@
 		<script src="../js/mui.js"></script>
 		<script type="text/javascript">
 			mui.init()
+
+			document.getElementById("login").addEventListener("tap",function(){
+				mui.openWindow({
+					url:"login.html",
+					id:"login"
+				})
+			})
 		</script>
 	</body>
 </html>
