优化登录注册，注册登录时添加客户端id

--- a/ChatFront/pages/index.html
+++ b/ChatFront/pages/index.html
@@ -1,57 +1,21 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="utf-8">
 		<title></title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../css/mui.css" rel="stylesheet" />
-		
-		<style type="text/css">
-			
-			body{
-				background-image:url(../images/bg.png);
-				background-size:cover;
-			}
-			
-			.btns{
-				position:absolute;
-				bottom:5%;
-				height:60px;
-				width:100%;
-			}
-			
-			.btn{
-				width:50%;
-				text-align:center;
-			}
-			
-			.mui-btn-green{
-				width:120px;
-			}
-		</style>
 	</head>
 
 	<body>
-		<div class="btns">
-			<div class="btn mui-pull-left">
-				<button id="login" class="mui-btn mui-btn-green">登录</button>
-			</div>
-			
-			<div class="btn mui-pull-right">
-				<button id="register" class="mui-btn mui-btn-green">注册</button>
-			</div>
-		</div>
-		
+		.<header class="mui-bar mui-bar-nav">
+		<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
+		<h1 class="mui-title">标题</h1>
+	</header>
+
 		<script src="../js/mui.js"></script>
 		<script type="text/javascript">
-			mui.init()
-
-			document.getElementById("login").addEventListener("tap",function(){
-				mui.openWindow({
-					url:"login.html",
-					id:"login"
-				})
-			})
+			mui.init();
 		</script>
 	</body>
 </html>
